# PyGeomesh

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  combination.ipynb  grid_box.ipynb  grid_cylinder.ipynb  grid_point.ipynb  grid_polygon.ipynb  grid_rotate.ipynb  pyproject.toml  random_box.ipynb  random_point.ipynb  random_polygon.ipynb  requirements.txt  setup.py
.github/workflows/: codestyle.yml  main.yml  publish-to-test-pypi.yml  publish.yml
PyGeomesh/: __init__.py  geometry.py  helper.ipynb  helper.py  test.ipynb
PyGeomesh/geometry/: geometry.py  point.py  test.ipynb
example/: combination.ipynb  grid_box.ipynb  grid_cylinder.ipynb  grid_point.ipynb  grid_rotate.ipynb  random_polygon.ipynb
geometry/: __init__.py  box.py  cylinder.py  geometry.py  point.py  polygon.py  rotate.py  sampler.py
tests/: test_model.py
