[tool.poetry]
name = "geomesh"
version = "0.1.0"
description = "Geomesh is a tool for generating meshes from geometry."
authors = ["PuQing <me@puqing.work>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mesh", "geometry", "mesh generation"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
numpy = "*"
matplotlib = "*"
abc = "*"
scipy = "*"
shapely = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
